# ecom-ai-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  store-config.example.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
core/: __init__.py  config.py  http.py  logging.py  secrets.py  state.py
docs/superpowers/: plan-1-deferred-concerns.md  plan-2-deferred-concerns.md  plan-3-deferred-concerns.md  plan-4-deferred-concerns.md  plan-5-deferred-concerns.md
klaviyo/utils/: cli.py  client.py
meta_ads/utils/: cli.py  client.py
shopify/scripts/: setup.py  whoami.py
shopify/utils/: cli.py  client.py  csv_io.py  diff.py  search.py
skills/klaviyo-campaigns/: SKILL.md
skills/klaviyo-flows/: SKILL.md
skills/klaviyo-lists/: SKILL.md
skills/klaviyo-metrics/: SKILL.md
skills/klaviyo-profiles/: SKILL.md
skills/klaviyo-templates/: SKILL.md
skills/meta-ads-audiences/: SKILL.md
skills/meta-ads-insights/: SKILL.md
skills/meta-ads-structure/: SKILL.md
skills/shopify-auth/: SKILL.md
skills/shopify-collections/: SKILL.md
skills/shopify-customers/: SKILL.md
skills/shopify-discounts/: SKILL.md
skills/shopify-hydrogen/: SKILL.md
skills/shopify-inventory/: SKILL.md
skills/shopify-metafields/: SKILL.md
skills/shopify-orders/: SKILL.md
skills/shopify-products/: SKILL.md
skills/shopify-theme/: SKILL.md
skills/shopify-translations/: SKILL.md
skills/shopify-webhooks/: SKILL.md
tests/: conftest.py
tests/core/: test_config.py  test_http.py  test_logging.py  (+2 more)
(+261 files in other folders)
